# SynTegra

./: README.md
src/: CMakeLists.txt  colors.h  defs.h  msg.c  msg.h  param.c  param.h  syntegra.c
